@@ -23,6 +23,7 @@ Cacti CHANGELOG
 -bug#0002543: Unable to switch pages within graphs_new.php due to invalid URL generation 
 -bug#0002544: Duplicate entry in $nav_url during list view 
 -bug#0002571: SQL Injection and Location header injection from cdef id CVE-2015-4342
+-bug#0002572: SQL injection in graph templates
 
 0.8.8c
 -bug#0002228: GPL incompatible files included in Cacti project in include/treeview
